# large-rocks-mapping

./: .gitignore  README.md  pyproject.toml
nationwide/: __init__.py  __main__.py  benchmark.py  cache.py  db.py  detector.py  monitor.py  pipeline.py  processing.py  spatial.py
src/active_teacher/: active_teacher_datasets.py  active_teacher_train.py
src/baseline/: baseline_train.py
src/scripts/: inference.py
tests/: test_hillshade.py  test_patch_generation.py
tests/fixtures/hillshade/dsm/: 2581_1126_0_0.tif  2586_1132_3_1.tif  2593_1130_1_2.tif  2640_1105_0_0.tif  2780_1138_1_2.tif
tests/fixtures/hillshade/expected/: 2581_1126_0_0.tif  2586_1132_3_1.tif  2593_1130_1_2.tif  2640_1105_0_0.tif  2780_1138_1_2.tif
utils/: arg_parser.py  constants.py  helpers.py
