[project]
name = "rock-detection"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3",
    "rasterio>=1.3",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "tifffile>=2024.8",
    "tqdm>=4.66",
    "requests>=2.31",
    "duckdb>=1.1",
    "scikit-learn>=1.5",
    "typer>=0.12",
    "psutil>=5.9",
]

[project.scripts]
rock-detect = "nationwide:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nationwide"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
