[project]
name = "rock-detection"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ultralytics>=8.3,<8.4",
    "torch>=2.5,<2.10",
    "torchvision>=0.15",
    "rasterio>=1.3",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "tqdm>=4.66",
    "requests>=2.31",
    "duckdb>=1.1",
    "typer>=0.12",
    "geopandas>=0.14",
]

[project.scripts]
large-rocks-mapping = "nationwide:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nationwide"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
